// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TargetDetails/Standards Multiple Standards 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div>
    <strong>
      S-3a
    </strong>
     
    <div>
      Mock standard
      <style
        jsx={true}
      >
        
      div {
        margin-top: 1em;
      }
    
      </style>
    </div>
    <style
      jsx={true}
    >
      
          div {
            margin-top: 1em;
          }
        
    </style>
  </div>
  <div>
    <strong>
      S-3b
    </strong>
     
    <div>
      Mock standard
      <style
        jsx={true}
      >
        
      div {
        margin-top: 1em;
      }
    
      </style>
    </div>
    <style
      jsx={true}
    >
      
          div {
            margin-top: 1em;
          }
        
    </style>
  </div>
  <div>
    <strong>
      S-3c
    </strong>
     
    <div>
      Mock standard
      <style
        jsx={true}
      >
        
      div {
        margin-top: 1em;
      }
    
      </style>
    </div>
    <style
      jsx={true}
    >
      
          div {
            margin-top: 1em;
          }
        
    </style>
  </div>
</div>
`;

exports[`Storyshots TargetDetails/Standards One Standard 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div>
    <strong>
      S-3a
    </strong>
     
    <div>
      Mock standard
      <style
        jsx={true}
      >
        
      div {
        margin-top: 1em;
      }
    
      </style>
    </div>
    <style
      jsx={true}
    >
      
          div {
            margin-top: 1em;
          }
        
    </style>
  </div>
</div>
`;
